--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="header-wrap clearfix">
      <!-- Logo -->
      <div class="logo pull-left">
-        <a href="<%= root_path %>"> <img src="/frontend/images/logo-viet-ren.jpg" alt="Logo" class="logo-img"> </a>
+        <a href="<%= root_path %>"> <img src="/frontend/images/logo_vietren.png" alt="Logo" class="logo-img"> </a>
      </div>
      <!-- /Logo -->
      <!-- Site navigation -->
@@ -18,7 +18,7 @@
            <!-- /Mobile Search -->
            <!-- Main menu -->
            <ul id="main-menu" class="main-menu">
-              <li class="menu-item menu-item-has-children"><a href="<%= root_path %>">Trang chủ</a>
+              <li class="menu-item"><a href="<%= root_path %>">Trang chủ</a>
               </li>
               <li class="menu-item menu-item-has-children"><a href="#">Giới thiệu</a>
                  <ul class="sub-menu">
@@ -42,15 +42,15 @@
                     </li>
                  </ul>
               </li>
-              <li class="menu-item"><%= link_to "Công nghệ thiết bị", { controller: "equipment", action: "index" } %></li>
+              <li class="menu-item"><%= link_to "Công nghệ thiết bị", { controller: "equipment_page", action: "index" } %></li>
               <li class="menu-item"><%= link_to "Thông báo", { controller: "notification", action: "index" } %></li>
-              <li class="menu-item"><a href="shop.html">Tin tức</a>
+              <li class="menu-item  menu-item-has-children"><a href="shop.html">Tin tức</a>
                  <ul class="sub-menu">
                     <li class="menu-item"><%= link_to "Tin chuyên ngành", { controller: "specialized_news", action: "index" } %></li>
                     <li class="menu-item"><%= link_to "Tin Việt Ren", { controller: "vietren_news", action: "index" } %></li>
                  </ul>
               </li>
-              <li class="menu-item"><a href="#">Thư viện ảnh</a>
+              <li class="menu-item  menu-item-has-children"><a href="#">Thư viện ảnh</a>
                  <ul class="sub-menu">
                     <li class="menu-item"><%= link_to "Dự án đầu tư", { controller: "gallery", action: "index" } %></li>
                     <li class="menu-item"><%= link_to "Công trình thi công", { controller: "gallery", action: "index" } %></li>
