--- a/app/views/layouts/frontend.html.erb
+++ b/app/views/layouts/frontend.html.erb
@@ -25,6 +25,8 @@
       <%= stylesheet_link_tag '/frontend/css/components.css' %>
       <%= stylesheet_link_tag '/frontend/js/owlcarousel/assets/owl.carousel.css' %>
       <%= stylesheet_link_tag '/frontend/css/swipebox.css' %>
+      
+      <%= stylesheet_link_tag '/frontend/stylesheets/custom.css' %>
       <!-- /Include CSS Files -->
    </head>
    <body class="stickyheader">
