--- a/public/frontend/css/components.css
+++ b/public/frontend/css/components.css
@@ -151,7 +151,7 @@ blockquote:not([class]), .blockquote-style-1 {
 
 /** Featured Title */
 .featured-title {
-  font-family: "Montserrat", sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   font-size: 18px;
   color: #000000;
   padding-top: 30px;
@@ -217,7 +217,7 @@ blockquote:not([class]), .blockquote-style-1 {
   border: 1px solid #e7e7e7;
   border-style: solid none;
   box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.14);
-  font-family: "Montserrat", sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   font-size: 13px;
   padding: 12px 0; }
   .breadcrumb ul, .breadcrumb ol {
@@ -263,7 +263,7 @@ blockquote:not([class]), .blockquote-style-1 {
   color: #fff;
   cursor: pointer;
   display: inline-block;
-  font-family: "Montserrat", sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   position: relative;
   text-transform: uppercase;
   transition: background-color .2s, color .2s;
@@ -495,7 +495,7 @@ blockquote:not([class]), .blockquote-style-1 {
   list-style: none;
   padding: 0;
   line-height: 1.42857em;
-  font-family: "Montserrat", sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   font-size: 12px; }
   .contact-info li {
     border-radius: 3px;
@@ -615,7 +615,7 @@ header.site-header .contact-info.style-4 li {
  */
 /** Content version */
 *:not(.widget) > .download {
-  font-family: "Montserrat", sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   font-size: 18px;
   padding: 21px 15px 50px 15px;
   position: relative; }
@@ -1151,7 +1151,7 @@ header.site-header .contact-info.style-4 li {
   position: relative; }
   .page-header .page-title {
     color: #4e4e4e;
-    font-family: "Montserrat", sans-serif;
+    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 28px;
     font-weight: 700;
     margin: 0; }
@@ -1439,7 +1439,7 @@ ul.page-numbers {
   background-color: #fab702;
   border-radius: 4px;
   color: #fff;
-  font-family: "Montserrat", sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   font-size: 11px;
   height: 42px;
   padding: 10px 0;
@@ -1471,7 +1471,7 @@ ul.page-numbers {
 
 .price {
   color: #fab702;
-  font-family: "Montserrat", sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   text-decoration: none; }
   .price del {
     color: #898989; }
@@ -1508,7 +1508,7 @@ body.single-product .product-image {
   width: 100%;
   clear: both;
   border-bottom: 1px solid #e5e5e5;
-  font-family: "Montserrat", sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   padding-bottom: 35px;
   margin-bottom: 25px; }
   .product-top-meta .price {
@@ -1590,7 +1590,7 @@ body.single-product .product-image {
     top: 0;
     width: 84px; }
   .orderform .quantity-field {
-    font-family: "Montserrat", sans-serif;
+    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
     -moz-appearance: textfield; }
   .orderform input::-webkit-outer-spin-button,
   .orderform input::-webkit-inner-spin-button {
@@ -1745,7 +1745,7 @@ section.recent-news {
     background: none;
     border: none;
     color: #999;
-    font-family: "Montserrat", sans-serif;
+    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
     padding: 17px 19px;
     text-align: center;
     width: 100%; }
@@ -1774,7 +1774,7 @@ section.recent-news {
 .filter-dark button {
   background-color: rgba(0, 0, 0, 0.3);
   border: none;
-  font-family: "Montserrat", sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   padding: 15px 15px 15px 15px;
   width: 100%; }
   @media (min-width: 992px) {
@@ -1931,7 +1931,7 @@ section.recent-news {
     background-color: #f8f9f9;
     color: #9a9a9a;
     display: block;
-    font-family: "Montserrat", sans-serif;
+    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 12px;
     padding: 13px 20px;
     text-transform: uppercase;
@@ -2295,7 +2295,7 @@ ul.testimonial-wrap {
   margin-top: 15px; }
 
 .search-notice-label {
-  font-family: "Montserrat", sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   font-size: 18px;
   font-weight: normal;
   margin-bottom: 15px;
@@ -2561,7 +2561,7 @@ table.table > tfoot {
   table.table > tbody th,
   table.table > thead th,
   table.table > tfoot th {
-    font-family: "Montserrat", sans-serif;
+    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
     font-weight: normal;
     text-transform: uppercase;
     color: #000000;
