--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -1,75 +1,77 @@
 <div class="container">
   <div class="row">
      <div class="col-md-3">
-           <!-- Text Widget -->
-           <div class="widget widget-nav-menu">
-              <h3 class="widget-title">Giới thiệu</h3>
-              <ul class="menu">
-                 <li><a href="#">Về chúng tôi</a></li>
-                 <li><a href="#">Cơ cấu tổ chức</a></li>
-                 <li><a href="#">Tài chính</a></li>
-                 <li><a href="#">Thành tích đạt được</a></li>
-              </ul>
-           </div>
-           <!-- /Text Widget -->
+        <div class="widget widget-image">
+           <h3 class="widget-title">Giới thiệu</h3>
+           <ul class="menu about">
+              <li><%= link_to "Về chúng tôi", { controller: "about_us", action: "index" } %></li>
+              <li><%= link_to "Cơ cấu tổ chức", { controller: "organization", action: "index" } %></li>
+              <li><%= link_to "Thành tích đạt được", { controller: "achivement", action: "index" } %></li>
+              <li><%= link_to "Tài chính", { controller: "finance", action: "index" } %></li>
+           </ul>
         </div>
-        <div class="col-md-3">
-           <!-- Navigation Widget -->
-           <div class="widget widget-nav-menu">
-              <h3 class="widget-title">Navigation</h3>
-              <ul class="menu">
-                 <li class="current-page"><a href="#">Trang chủ</a></li>
-                 <li><a href="#">Công trình</a></li>
-                 <li><a href="#">Công nghệ thiết bị</a></li>
-                 <li><a href="#">Thông báo</a></li>
-                 <li><a href="#">Tin tức</a></li>
-                 <li><a href="#">Thư viện ảnh</a></li>
-                 <li><a href="#">Tuyển dụng</a></li>
-                 <li><a href="#">Liên hệ</a></li>
-              </ul>
-           </div>
-           <!-- /Navigation Widget -->
+     </div>
+     <div class="col-md-3">
+        <!-- Navigation Widget -->
+        <div class="widget widget-nav-menu">
+           <h3 class="widget-title">Menu</h3>
+           <ul class="menu">
+              <li><%= link_to "Giới thiệu", { controller: "about_us", action: "index" } %></li>
+              <li><%= link_to "Liên hệ", { controller: "contact", action: "index" } %></li>
+              <li><%= link_to "Thông báo", { controller: "notification", action: "index" } %></li>
+              <li><%= link_to "Tin tức", { controller: "specialized_news", action: "index" } %></li>
+              <li><%= link_to "Tuyển dụng", { controller: "recruitment", action: "index" } %></li>
+              <li><%= link_to "Thư viện ảnh", { controller: "gallery", action: "index" } %></li>
+              <li><%= link_to "Công trình", { controller: "completed_construction", action: "index" } %></li>
+              <li><%= link_to "Công nghệ thiết bị", { controller: "equipment_page", action: "index" } %></li>
+           </ul>
         </div>
-        <div class="col-md-3">
-           <!-- Contact Info Widget -->
-           <div class="widget widget-contact-info">
-              <h3 class="widget-title">Địa chỉ</h3>
-              <ul class="contact-info">
-                 <li><i class="fa fa-map-marker"></i> 242 QL 9 - Đông Hà - Quảng Trị</li>
-                 <li><i class="fa fa-phone"></i> <a href="#" class="important">053.3850.222</a></li>
-                 <li><i class="fa fa-envelope"></i> <a href="mailto:vrc@vnn.vn">vrc@vnn.vn</a></li>
-              </ul>
-           </div>
-           <!-- /Contact Info Widget -->
+        <!-- /Navigation Widget -->
+     </div>
+     <div class="col-md-3">
+        <!-- Contact Info Widget -->
+        <div class="widget widget-contact-info">
+           <h3 class="widget-title">Liên hệ</h3>
+           <ul class="contact-info">
+              <li><i class="fa fa-map-marker"></i> <%= @company.address_vn %></li>
+              <li><i class="fa fa-phone"></i> <a href="#" class="important"><%= @company.phone + " - " + @company.phone_2 %></a></li>
+              <li><i class="fa fa-fax"></i> <a href="#"><%= @company.fax %></a></li>
+              <li><i class="fa fa-envelope"></i> <a href="mailto:<%= @company.email %>"><%= @company.email %></a></li>
+           </ul>
         </div>
-        <div class="col-md-3">
-           <!-- Text Widget -->
-           <div class="widget widget-text">
-              <h3 class="widget-title">Working Hours</h3>
-              <p>Visit us at our HQ for a mean cup of coffe and a fantastic consulting team.</p>
-           </div>
-           <!-- /Text Widget -->
-           <!-- Working Hours Widget -->
-           <div class="widget">
-              <table class="working-hours">
-                 <tbody>
-                    <tr>
-                       <th>Monday > Friday:</th>
-                       <td>9am > 5pm</td>
-                    </tr>
-                    <tr>
-                       <th>Saturday:</th>
-                       <td>9am > 1pm</td>
-                    </tr>
-                    <tr>
-                       <th>Sunday:</th>
-                       <td>Closed</td>
-                    </tr>
-                 </tbody>
-              </table>
-           </div>
-           <!-- /Working Hours Widget -->
+        <!-- /Contact Info Widget -->
+     </div>
+     <div class="col-md-3">
+        <!-- Text Widget -->
+        <div class="widget widget-text">
+           <h3 class="widget-title">Phòng ban</h3>
         </div>
+        <!-- /Text Widget -->
+        <!-- Working Hours Widget -->
+        <div class="widget">
+           <table class="working-hours">
+              <tbody>
+                  <tr>
+                     <th>Kế toán - Tài chính</th>
+                     <td>053 3850222</td>
+                  </tr>
+                  <tr>
+                     <th>Kỹ thuật</th>
+                     <td>053 3852925</td>
+                  </tr>
+                  <tr>
+                     <th>Tổ chức hành chính</th>
+                     <td>053 2211052</td>
+                  </tr>
+                  <tr>
+                     <th>Kế hoạch tổng hợp</th>
+                     <td>053 2210570</td>
+                  </tr>
+              </tbody>
+           </table>
+        </div>
+        <!-- /Working Hours Widget -->
+     </div>
   </div>
 </div>
 <!-- Copyright Footer -->
@@ -79,7 +81,7 @@
         <div class="col-md-6">
            <!-- Text Widget -->
            <div class="widget widget-text">
-              <p>Copyright © 2016 Công ty CP Việt Ren - Developed by <a href="hoangkhang.com.vn" target="_blank">Hoàng Khang Incotech</a></p>
+              <p>Copyright © 2016 Công Ty Cổ Phần Việt Ren - Developed by <a href="http://hoangkhang.com.vn/" target="_blank">Hoàng Khang Incotech</a></p>
            </div>
            <!-- /Text Widget -->
         </div>
@@ -87,10 +89,10 @@
            <!-- Social Widget -->
            <div class="widget widget-social">
               <ul class="social">
-                 <li><a href="https://twitter.com/anpsthemes"><i class="fa fa-twitter"></i></a></li>
-                 <li><a href="https://www.facebook.com/anpsthemes"><i class="fa fa-facebook"></i></a></li>
-                 <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                 <li><a href="https://profiles.wordpress.org/anpsthemes/"><i class="fa fa-wordpress"></i></a></li>
+                 <li><a href=""><i class="fa fa-twitter"></i></a></li>
+                 <li><a href=""><i class="fa fa-facebook"></i></a></li>
+                 <li><a href=""><i class="fa fa-linkedin"></i></a></li>
+                 <li><a href=""><i class="fa fa-wordpress"></i></a></li>
               </ul>
            </div>
            <!-- /Social Widget -->
