update code home page

--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -81,7 +81,7 @@
         <div class="col-md-6">
            <!-- Text Widget -->
            <div class="widget widget-text">
-              <p>Copyright © 2016 Công Ty Cổ Phần Việt Ren - Developed by <a href="http://hoangkhang.com.vn/" target="_blank">Hoàng Khang Incotech</a></p>
+              <p>Copyright © 2016 Công Ty Cổ Phần Việt Ren - Developed by <a href="http://hoangkhang.com.vn/" target="_blank">Hoang Khang Incotech</a></p>
            </div>
            <!-- /Text Widget -->
         </div>
