--- a/app/views/home/_slideshow.html.erb
+++ b/app/views/home/_slideshow.html.erb
@@ -3,7 +3,7 @@
      <ul>
         <!-- Slider 1 -->
         <li data-transition="slideright" data-masterspeed="400" data-fstransition="fade">
-           <!-- MAIN IMAGE --><img src="/frontend/images/image_1.jpg" alt="" width="1920" height="1280">
+           <!-- MAIN IMAGE --><img src="/frontend/images/slideshow/slider-1.jpg" alt="" width="1920" height="1280">
            <!-- LAYER NR. 1 -->
            <div class="tp-caption text-uppercase rev-title " data-x="center" data-hoffset="" data-y="center" data-voffset="-60" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="o:1;s:500" data-transform_out="o:0;s:500"
            data-visibility="['on','on','on','off']" data-start="500">Welcome</div>
@@ -19,7 +19,7 @@
         </li>
         <!-- Slider 2 -->
         <li data-transition="slideright" data-masterspeed="400">
-           <!-- MAIN IMAGE --><img src="/frontend/images/tau-viet-ren.jpg" alt="" width="1920" height="1280">
+           <!-- MAIN IMAGE --><img src="/frontend/images/slideshow/slider-2.jpg" alt="" width="1920" height="1280">
            <!-- LAYER NR. 1 -->
            <div class="tp-caption rev-title text-uppercase" data-x="left" data-hoffset="40" data-y="center" data-voffset="-100" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="o:1;s:500" data-transform_out="o:0;s:500"
            data-start="500" data-visibility="['on','on','on','off']" style="font-size: 48px; font-weight: normal;">Tàu việt ren</div>
@@ -37,7 +37,25 @@
         </li>
         <!-- Slider 3 -->
         <li data-transition="slideright" data-masterspeed="400">
-           <!-- MAIN IMAGE --><img src="/frontend/images/nha-may-thuy-dien.jpg" alt="" width="1920" height="1280">
+           <!-- MAIN IMAGE --><img src="/frontend/images/slideshow/slider-3.jpg" alt="" width="1920" height="1280">
+           <!-- LAYER NR. 1 -->
+           <div class="tp-caption text-uppercase rev-title" data-x="left" data-hoffset="40" data-y="center" data-voffset="-100" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="o:1;s:500" data-transform_out="o:0;s:500"
+           data-start="500" data-visibility="['on','on','on','off']" style="font-size: 48px; font-weight: normal;"> Dự án nhà máy thủy điện <strong style="color: #fab702; font-weight: inherit;"></strong></div>
+           <!-- LAYER NR. 2 -->
+           <div class="tp-caption" data-x="left" data-hoffset="40" data-y="center" data-voffset="-35" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="o:1;s:500" data-transform_out="o:0;s:500" data-start="500" data-visibility="['on','on','on','off']"
+           style="font-size: 16px; font-family: 'PT Sans', sans-serif;">We offer free consulting and the best project management
+              <br> for your idea, 100% delivery guaranteed.
+              <br> See for yourself, get on board now.</div>
+           <!-- LAYER NR. 3 -->
+           <div class="tp-caption tp-resizeme" data-x="left" data-hoffset="40" data-y="center" data-voffset="40" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="o:1;s:500" data-transform_out="o:0;s:500" data-visibility="['on','on','on','off']"
+           data-start="500"><a href="#" class="btn btn-wide">Chi tiết</a></div>
+           <!-- LAYER NR. 4 -->
+           <div class="tp-caption tp-resizeme" data-x="left" data-hoffset="190" data-y="center" data-voffset="40" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="o:1;s:500" data-transform_out="o:0;s:500" data-visibility="['on','on','on','off']"
+           data-start="500"><a href="contact.html" class="btn btn-light btn-wide">Liên hệ</a></div>
+        </li>
+        <!-- Slider 3 -->
+        <li data-transition="slideright" data-masterspeed="400">
+           <!-- MAIN IMAGE --><img src="/frontend/images/slideshow/slider-4.jpg" alt="" width="1920" height="1280">
            <!-- LAYER NR. 1 -->
            <div class="tp-caption text-uppercase rev-title" data-x="left" data-hoffset="40" data-y="center" data-voffset="-100" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="o:1;s:500" data-transform_out="o:0;s:500"
            data-start="500" data-visibility="['on','on','on','off']" style="font-size: 48px; font-weight: normal;"> Dự án nhà máy thủy điện <strong style="color: #fab702; font-weight: inherit;"></strong></div>
