--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -204,42 +204,42 @@
                         <div class="col-xs-2">
                            <figure class="gallery-item">
                               <div class="gallery-icon">
-                                 <a href="/frontend/images/demo/service-single.jpg"><img src="/frontend/images/demo/gallery-1.jpg" alt="Gallery 1"></a>
+                                 <a href="/frontend/images/bang-khen/big-2.jpg"><img src="/frontend/images/bang-khen/small-2.jpg" alt="Gallery 2"></a>
                               </div>
                            </figure>
                         </div>
                         <div class="col-xs-2">
                            <figure class="gallery-item">
                               <div class="gallery-icon">
-                                 <a href="/frontend/images/demo/service-single-2.jpg"><img src="/frontend/images/demo/gallery-2.jpg" alt="Gallery 2"></a>
+                                 <a href="/frontend/images/bang-khen/big-3.jpg"><img src="/frontend/images/bang-khen/small-3.jpg" alt="Gallery 3"></a>
                               </div>
                            </figure>
                         </div>
                         <div class="col-xs-2">
                            <figure class="gallery-item">
                               <div class="gallery-icon">
-                                 <a href="/frontend/images/demo/service-single-3.jpg"><img src="/frontend/images/demo/gallery-3.jpg" alt="Gallery 3"></a>
+                                 <a href="/frontend/images/bang-khen/big-4.jpg"><img src="/frontend/images/bang-khen/small-4.jpg" alt="Gallery 4"></a>
                               </div>
                            </figure>
                         </div>
                         <div class="col-xs-2">
                            <figure class="gallery-item">
                               <div class="gallery-icon">
-                                 <a href="/frontend/images/demo/service-single-4.jpg"><img src="/frontend/images/demo/gallery-4.jpg" alt="Gallery 4"></a>
+                                 <a href="/frontend/images/bang-khen/big-5.jpg"><img src="/frontend/images/bang-khen/small-5.jpg" alt="Gallery 5"></a>
                               </div>
                            </figure>
                         </div>
                         <div class="col-xs-2">
                            <figure class="gallery-item">
                               <div class="gallery-icon">
-                                 <a href="/frontend/images/demo/service-single-5.jpg"><img src="/frontend/images/demo/gallery-5.jpg" alt="Gallery 5"></a>
+                                 <a href="/frontend/images/bang-khen/big-6.png"><img src="/frontend/images/bang-khen/small-6.png" alt="Gallery 6"></a>
                               </div>
                            </figure>
                         </div>
                         <div class="col-xs-2">
                            <figure class="gallery-item">
                               <div class="gallery-icon">
-                                 <a href="/frontend/images/demo/service-single-6.jpg"><img src="/frontend/images/demo/gallery-6.jpg" alt="Gallery 6"></a>
+                                 <a href="/frontend/images/bang-khen/big-1.jpg"><img src="/frontend/images/bang-khen/small-1.jpg" alt="Gallery 6"></a>
                               </div>
                            </figure>
                         </div>
